--- a/novi/novi.css
+++ b/novi/novi.css
@@ -1,22 +1,124 @@
-.card1{
-    width: 400px;
-    height: 500px;
-    background-color: rgb(68, 63, 63);
-    border-color: rgb(177, 168, 168);
-    border-radius: 13px;
-    margin: 15px;
-    padding: 15px;
-    float: left;
-}
-.card1:hover{
-    background-color: rgb(179, 161, 170);
-    
-}
-
-.p1{
-    font-family: Arial, Helvetica, sans-serif;
-    color: honeydew;
+body {
+    background: #2ecc71;
+    font-size: 62.5%;
+  }
+  
+  .container {
+    padding: 2em;
+  }
+  
+  /* GENERAL BUTTON STYLING */
+  button,
+  button::after {
+    -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+      transition: all 0.3s;
+  }
+  
+  button {
+    background: none;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+    display: block;
+    font-size: 1.6em;
     font-weight: bold;
-    font-size: 22px;
-    
-}
+    margin: 1em auto;
+    padding: 2em 6em;
+    position: relative;
+    text-transform: uppercase;
+  }
+  
+  button::before,
+  button::after {
+    background: #fff;
+    content: '';
+    position: absolute;
+    z-index: -1;
+  }
+  
+  button:hover {
+    color: #2ecc71;
+  }
+  
+  /* BUTTON 1 */
+  .btn-1::after {
+    height: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+  
+  .btn-1:hover:after {
+    height: 100%;
+  }
+  
+  /* BUTTON 2 */
+  .btn-2::after {
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 0;
+  }
+  
+  .btn-2:hover:after {
+    width: 100%;
+  }
+  
+  /* BUTTON 3 */
+  .btn-3::after {
+    height: 0;
+    left: 50%;
+    top: 50%;
+    width: 0;
+  }
+  
+  .btn-3:hover:after {
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+  .btn-4::before {
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+  
+  .btn-4::after {
+    background: #2ecc71;
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+  
+  .btn-4:hover:after {
+    height: 0;
+    left: 50%;
+    top: 50%;
+    width: 0;
+  }
+  
+  
+  .btn-5 {
+   overflow: hidden;
+  }
+  
+  .btn-5::after {
+    height: 100%;
+    left: -35%;
+    top: 0;
+    transform: skew(50deg);
+    transition-duration: 0.6s;
+    transform-origin: top left;
+    width: 0;
+
+  }
+  
+  .btn-5:hover:after {
+    height: 100%;
+    width: 135%;
+  }
